--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Articles listing page</h1>
 
-<table border=1px solid black>
+<table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Action</th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
   <tbody>
@@ -13,8 +13,14 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td>pladsfdasffaf</td>
+        <td><%= link_to "Show", article_path(article)%></td>
+        <td><%= link_to "Edit", edit_article_path(article)%></td>
+        <td><%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<p>
+  <%= link_to "Add a new Article", new_article_path%>
+</p>
+<%= link_to "Home Page", root_path%> 
