--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,15 +1,6 @@
 <h1>Create new Article</h1>
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-  <p>
-    <%= f.label :title %> <br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %> <br>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-  <%= f.submit %>
-  </p>
-<% end %>  
+<%= render 'form' %>
+
+<%= link_to "Return to Articles list", articles_path%> 
+
