--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,3 @@
-<h1>Create new Article</h1>
-
+<h1 class="text-center mt-4">Create a new article</h1>
 <%= render 'form' %>
-
-<%= link_to "Return to Articles list", articles_path%> 
 
