--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,7 +29,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to "View your Profile", user_path(current_user), class: "dropdown-item" %>
-            <%= link_to "Edit your Profile", edit_user_path(current_user), class: "dropdown-item" %>       
+            <%= link_to "Edit your Profile", edit_user_path(current_user), class: "dropdown-item" %> 
+            <%= link_to "Delete your Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"} %>      
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
