--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,6 +22,18 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Categories
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <%= link_to "View Categories", categories_path, class: "dropdown-item" %>
+        <div class="dropdown-divider"></div>
+          <% if logged_in? && current_user.admin? %>
+            <%= link_to "Create new Category", new_category_path, class: "dropdown-item" %>
+          <% end %>
+      </div>
+      </li>
       <% if logged_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -31,10 +43,9 @@
             <%= link_to "View your Profile", user_path(current_user), class: "dropdown-item" %>
             <%= link_to "Edit your Profile", edit_user_path(current_user), class: "dropdown-item" %> 
             <%= link_to "Delete your Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"} %>      
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
+     
         <li class="nav-item">
           <%= link_to "Log out", logout_path, class:"nav-link", method: :delete %>
         </li>
@@ -46,6 +57,7 @@
           <%= link_to "Sign up", signup_path, class:"nav-link" %>
         </li>
       <% end %>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
