--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,11 +1,11 @@
-<h1 class="text-center mt-4">Create a new Category</h1>
+<h1 class="text-center mt-4">Edit Category</h1>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
       <%= render 'form' %>
     </div>
     <div class="mb-3">
-      <%= link_to '[ Cancel and return to Categories listing ]', categories_path(@category), class: "text-info" %>
+      <%= link_to '[ Cancel and return to Category ]', category_path(@category), class: "text-info" %>
     </div>
   </div>
 </div>
